# cutie-backtest-providers

./: .gitignore  README.md
backtesting-py/: canonical_json.py  cutie_backtesting_provider.py  requirements.txt  strategy_execution.py  strategy_kernel.py
backtesting-py/tests/: test_canonical_json.py  test_central_market_data_fallback.py  test_failure_contract.py  test_futures.py  test_paper_tick.py  test_result_v2.py  test_strategy_kernel.py  test_strategy_kernel_primitives.py
backtesting-py/tests/fixtures/: strategy_execution_capability_v1.json  strategy_kernel_conformance_v1.json  strategy_kernel_state_conformance_v1.json
backtesting-py/tests/fixtures/canonical_json/: golden.json
docs/reviews/: 2026-07-15-62-2a-provider-kernel.md
freqtrade/: cutie_freqtrade_provider.py  test_cutie_freqtrade_provider.py
freqtrade/sample_strategies/: SampleStrategy.py
scripts/: install-backtesting-py-provider.sh  install-freqtrade-provider.sh  register-custom-provider.sh
scripts/lib/: cutie-provider-install.sh
scripts/tests/: test_secure_provider_install.py
templates/python-provider/: README.md  pyproject.toml
templates/python-provider/cutie_byo_provider/: __init__.py  adapter.py  app.py  contract.py  reports.py  security.py  settings.py
templates/python-provider/tests/: conftest.py  test_contract.py  test_security.py  test_smoke.py
validator/: README.md  pyproject.toml
validator/cutie_backtest_provider_validator/: __init__.py  cli.py  report_url.py  schema_subset.py  secrets.py  transport.py  validator.py
validator/tests/: test_validator.py
